--- a/Share/Info.plist
+++ b/Share/Info.plist
@@ -25,7 +25,14 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>NSExtensionActivationRule</key>
-			<string>TRUEPREDICATE</string>
+			<dict>
+				<key>NSExtensionActivationSupportsMovieWithMaxCount</key>
+				<string>1</string>
+				<key>NSExtensionActivationSupportsImageWithMaxCount</key>
+				<string>0</string>
+				<key>NSExtensionActivationSupportsWebURLWithMaxCount</key>
+				<string>1</string>
+			</dict>
 		</dict>
 		<key>NSExtensionMainStoryboard</key>
 		<string>MainInterface</string>
